--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,24 @@
-<nav class="navbar navbar-expand-sm bg-success navbar-dark">
-  <!-- Links -->
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" routerLink="/users-list"
-      >Show Users</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLinkActive="active" routerLink="/add-user"
-      >Add Users</a
-    >
-    </li>
-  </ul>
+<!-- Barra de navegación estilizada -->
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0d195d; border-radius: 0 0 15px 15px;">
+  <div class="container">
+    <a class="navbar-brand" href="#" style="font-family: 'Poppins', sans-serif; font-size: 1.5rem; font-weight: 600;">Los Maquiavelicos</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/users-list" style="font-family: 'Poppins', sans-serif; font-size: 1.1rem;">Ver Usuarios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/add-user" style="font-family: 'Poppins', sans-serif; font-size: 1.1rem;">Añadir Usuarios</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
-<div class="container">
-  <br>
-  <h2 style="text-align: center;">{{title}}</h2>
-  <hr>  
+
+<!-- Contenido de la página -->
+<div class="container mt-5">
   <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
